# seat_allocator

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  demo.py  examples.py  main.py  pyproject.toml  run.bat  run.sh
data/: category_priority.csv  choices.csv  institutes.csv  programs.csv  ranks.csv  rounds_config_barch.csv  rounds_config_betech.csv  seat_matrix.csv  students.csv
scripts/: convert_reap.py
src/seat_alloc/: __init__.py  allocator.py  category_priority.py  cli.py  eligibility.py  internal_sliding.py  io_csv.py  models.py  reports.py  reservation_config.py  rounds.py  seat_expansion.py  special_round.py  sports_quota.py  withdrawal.py
ui/: app.py
